test: fix mockito errors accessing protected API in JDK16 (#11034) (CP: 6.0)
related to https://github.com/vaadin/flow-components/issues/997
related to https://github.com/vaadin/flow-components/issues/998